<resources>
    <!-- main app name -->
    <string name="app_name">JokesApp</string>

    <!-- activity_main.xml strings -->
    <string name="BTN_J1">JOKE 1</string>
    <string name="BTN_J1_ANS">JOKE 1 ANSWER</string>
    <string name="j1">Why do fathers take an extra pair of socks when they go golfing?</string>
    <string name="j1_ANS">In case they get a hole in one!</string>

    <string name="BTN_J2">JOKE 2</string>
    <string name="BTN_J2_ANS">JOKE 2 ANSWER</string>
    <string name="j2">What do a tick and the Eiffel Tower have in common?</string>
    <string name="j2_ANS">They are both Paris sites.</string>

    <string name="tv_JokeDisplay">JOKE DISPLAY</string>

    <!-- mainmenu.xml strings -->
    <string name="jokes_Game">Jokes Game</string>
    <string name="numeral_Converter">Number Converter</string>
    <string name="exit_option">Exit</string>

    <!-- activity_numeralconvert.xml strings -->
    <string name="dec_to_rom_ToolTipTXTBOX">Enter Greek number to convert to Roman numeral</string>
    <string name="rom_to_dec_ToolTipTXTBOX">Enter Roman numeral to convert to Greek number</string>
    <string name="dec_to_rom_BTNToolTip">Greek to Roman numeral converter</string>
    <string name="rom_to_deC_BTNToolTip">Roman to Greek numeral converter</string>
    <string name="dec_to_rom_txtBox">Enter Greek Number</string>
    <string name="rom_to_dec_txtBox">Enter Roman Numeral</string>
    <string name="dec_to_rom_BTN">Greek Converter</string>
    <string name="rom_to_dec_BTN">Roman Converter</string>
    <string name="conversion_TxtView">Conversion Results</string>
    <string name="title_activity_clicker_game">ClickerGameActivity</string>
    <string name="tv_Convert">Convert</string>

    <!-- activity clicker game strings-->
    <string name="clicker_Game">Clicker</string>
    <string name="clickerBTNA">CLICKER A</string>
    <string name="clickerBTNB">CLICKER B</string>
    <string name="tv_clksLeft">Clicks: </string>
    <string name="clksLeft_msgg">Clicks: %1$d</string>
    <string name="clicker_StartBtn">START</string>
    <string name="clkrOVER">Final Count: </string>
    <string name="timeLeft">Timer: </string>
    <string name="timerLeft_msg">Timer: %1$d</string>
    <string name="clkrPopUpWinGameOver">GAME OVER!</string>
    <string name="clkrReset">RESET</string>

    <!--Splash screen -->
    <string name="splashTitle">Feature Runner</string>
    <string name="splashDescription">Intro splash dragon eye</string>

    <!--Sign Up page-->
    <string name="signUpBanner">Lets Run</string>
    <string name="signUpWelcomeNote">Sign Up to get started</string>
    <string name="signUpFirstName">First Name</string>
    <string name="signUpLastName">Last Name</string>
    <string name="userLoginName">Username</string>
    <string name="accPassword">Password</string>
    <string name="signUpBTN">SIGN UP</string>
    <string name="alreadyMember">Already a member?</string>

    <!--Login Page -->
    <string name="loginWelcomeNote">Welcome back! Login to get started</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="LoginBanner">Lets Run</string>
    <string name="loginBTN">LOGIN</string>
    <string name="createNewAcc">Create New Account?</string>
</resources>