<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clickerGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClickerGameActivity">

    <Button
        android:id="@+id/clkrBtnA"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="@drawable/clicker_border"
        android:text="@string/clickerBTNA"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ClksLeft" />

    <Button
        android:id="@+id/clkrBtnB"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/clicker_border"
        android:text="@string/clickerBTNB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clkrBtnA"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/tv_ClksLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_clksLeft"
        android:textSize="@dimen/clicker_clicksDisp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundProgBar" />

    <ProgressBar
        android:id="@+id/roundProgBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="195dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/round_prog_bar"
        app:flow_verticalAlign="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:progress="100" />

    <Button
        android:id="@+id/clkrStartBtn"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/clicker_StartBtn"
        android:background="@drawable/clicker_border"
        app:layout_constraintBottom_toBottomOf="@+id/roundProgBar"
        app:layout_constraintEnd_toEndOf="@+id/roundProgBar"
        app:layout_constraintStart_toStartOf="@+id/roundProgBar"
        app:layout_constraintTop_toTopOf="@+id/roundProgBar" />

    <TextView
        android:id="@+id/tv_clkrTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:text="@string/timeLeft"
        android:textSize="@dimen/clicker_clicksDisp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toEndOf="@+id/tv_ClksLeft"
        app:layout_constraintTop_toBottomOf="@+id/roundProgBar" />

</androidx.constraintlayout.widget.ConstraintLayout>